--- a/properties.html
+++ b/properties.html
@@ -31,9 +31,9 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\Sairaj\OneDrive\Desktop\New folder (3)\images\villa-exterior-1.jpg" class="card-img-top" alt="Luxury Villa Mumbai" />
+          <img src="images\.jpg.jpg" class="card-img-top" alt="Luxury Villa Mumbai" />
           <div class="card-body">
-            <h5 class="card-title">Luxury Villa in Mumbai</h5>
+            <h5 class="card-title">Luxury Villa in Pune</h5>
             <p class="card-text">4 Bed, 3 Bath, Swimming pool, Garden</p>
             <p><strong>Price:</strong> ₹2.5 Crore</p>
             <a href="#" class="btn btn-primary">Enquire Now</a>
@@ -43,7 +43,7 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\Sairaj\OneDrive\Desktop\New folder (3)\images\villa-exterior-2.jpg" class="card-img-top" alt="Commercial Space Pune" />
+          <img src="images\.jpg1.jpg" class="card-img-top" alt="Commercial Space Pune" />
           <div class="card-body">
             <h5 class="card-title">Commercial Space in Pune</h5>
             <p class="card-text">Office area, 1200 sqft, Prime Location</p>
@@ -55,9 +55,9 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\Sairaj\OneDrive\Desktop\New folder (3)\images\office-commercial.jpg" class="card-img-top" alt="Residential Plot Nashik" />
+          <img src="images\.jpg2.jpg" class="card-img-top" alt="Residential Plot Nashik" />
           <div class="card-body">
-            <h5 class="card-title">Residential Plot in Nashik</h5>
+            <h5 class="card-title">Residential Plot in Pune</h5>
             <p class="card-text">500 sqft plot, gated community</p>
             <p><strong>Price:</strong> ₹45 Lakh</p>
             <a href="#" class="btn btn-primary">Enquire Now</a>
