--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </section>
 
   <footer class="bg-primary text-white text-center py-3">
-    &copy; 2025 Swastik Properties. All Rights Reserved.
+    &copy; 2025 Swastik Properties,Tathawade,Pune
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
