--- a/properties.html
+++ b/properties.html
@@ -31,7 +31,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="images\.jpg.jpg" class="card-img-top" alt="Luxury Villa Mumbai" />
+          <img src="images/s.jpg.jpg" class="card-img-top" alt="Luxury Villa Mumbai" />
           <div class="card-body">
             <h5 class="card-title">Luxury Villa in Pune</h5>
             <p class="card-text">4 Bed, 3 Bath, Swimming pool, Garden</p>
