--- a/properties.html
+++ b/properties.html
@@ -43,7 +43,7 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="images\.jpg1.jpg" class="card-img-top" alt="Commercial Space Pune" />
+          <img src="images/a.jpg.jpg" class="card-img-top" alt="Commercial Space Pune" />
           <div class="card-body">
             <h5 class="card-title">Commercial Space in Pune</h5>
             <p class="card-text">Office area, 1200 sqft, Prime Location</p>
@@ -55,7 +55,7 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="images\.jpg2.jpg" class="card-img-top" alt="Residential Plot Nashik" />
+          <img src="images/a.jpg.jpg" class="card-img-top" alt="Residential Plot Nashik" />
           <div class="card-body">
             <h5 class="card-title">Residential Plot in Pune</h5>
             <p class="card-text">500 sqft plot, gated community</p>
