--- a/properties.html
+++ b/properties.html
@@ -55,7 +55,7 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="images/a.jpg.jpg" class="card-img-top" alt="Residential Plot Nashik" />
+          <img src="images/p.jpg.jpg" class="card-img-top" alt="Residential Plot Nashik" />
           <div class="card-body">
             <h5 class="card-title">Residential Plot in Pune</h5>
             <p class="card-text">500 sqft plot, gated community</p>
